--- a/.github/workflows/mdn.yml
+++ b/.github/workflows/mdn.yml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v4.1.1
         with:
           context: .
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/mdn:latest
