--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
         
       - name: Install Golang
-        uses: actions/checkout@v5
+        uses: actions/setup-go@v5
         with: 
           go-version: ${{ env.GOLANG }}
 
@@ -136,7 +136,7 @@ jobs:
         shell: bash
         
       - name: Install Golang
-        uses: actions/checkout@v5
+        uses: actions/setup-go@v5
         with: 
           go-version: ${{ env.GOLANG }}
 
