--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -19,7 +19,7 @@ jobs:
         shell: bash
 
       - name: Install Golang
-        uses: actions/checkout@v5
+        uses: actions/setup-go@v5
         with: 
           go-version: ${{ env.GOLANG }}
 
