--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       
       - name: Set variables
         run: |
@@ -30,7 +30,7 @@ jobs:
         shell: bash
         
       - name: Install Golang
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with: 
           go-version: ${{ env.GOLANG }}
 
@@ -40,7 +40,7 @@ jobs:
           sudo apt install -y ninja-build pkg-config qemu-user ccache bubblewrap
           sudo apt purge -y libc6-i386
           sudo apt purge -y qemu-user-binfmt
-          wget "https://github.com/bolucat/ninja/releases/download/qemu-user-static/qemu-user-static_8.0+dfsg-4_amd64.deb" -O qemu-user-static.deb
+          wget "https://github.com/bolucat/ninja/releases/download/qemu-user-static/qemu-user_9.2.2+ds-1+b2_amd64.deb" -O qemu-user-static.deb
           sudo dpkg -i qemu-user-static.deb
           git clone https://github.com/klzgrad/naiveproxy naiveproxy
           pushd naiveproxy || exit 1
@@ -121,12 +121,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install ninja
-        uses: seanmiddleditch/gha-setup-ninja@master
-        with:
-          destination: ~/bin/ninja.exe
+        uses: actions/checkout@v5
 
       - name: Set variables
         run: |
@@ -136,7 +131,7 @@ jobs:
         shell: bash
         
       - name: Install Golang
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with: 
           go-version: ${{ env.GOLANG }}
 
@@ -203,7 +198,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       
       - name: Set variables
         run: |
@@ -215,19 +210,19 @@ jobs:
           cp src/naiveproxy/* $PWD
       
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2.1.0
+        uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
       - name: Login to DockerHub
-        uses: docker/login-action@v2.1.0
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build latest
-        uses: docker/build-push-action@v4.1.1
+        uses: docker/build-push-action@v4
         with:
           context: .
           platforms: linux/386,linux/amd64,linux/arm/v7,linux/arm64
@@ -242,7 +237,7 @@ jobs:
      steps:
        
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
       
       - name: Setup variables
         run: |
@@ -259,7 +254,7 @@ jobs:
       steps:
 
         - name: Checkout
-          uses: actions/checkout@v4
+          uses: actions/checkout@v5
 
         - name: Set variables
           run: |
