--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -7,25 +7,100 @@ name: sing-box
 jobs:
   build:
     runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        include:
+          - { os: linux, arch: amd64, variant: glibc, naive: true }
+          - { os: linux, arch: arm64, variant: glibc, naive: true }
+          - { os: linux, arch: "386", variant: glibc, naive: true, go386: sse2 }
     steps:
       
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set Env
         run: |
           echo "GOLANG=$(wget -qO- https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep 'version' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
           echo "VERSION=$(cat "version/sing-box" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          wget -qO- https://raw.githubusercontent.com/SagerNet/sing-box/refs/heads/dev-next/.github/CRONET_GO_VERSION | head -n1 | tr -d [:space:] > .github/CRONET_GO_VERSION
         shell: bash
 
+      - name: Clone repository
+        run: |
+          set -xeuo pipefail
+          git clone --depth=1 --branch=dev-next https://github.com/SagerNet/sing-box.git sing-box
+          cp -r sing-box/. ./
+          rm -rf sing-box
+
       - name: Install Golang
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v6
         with: 
           go-version: ${{ env.GOLANG }}
 
-      - name: Start build
+      - name: Clone cronet-go
         run: |
-          cp src/build/sing-box.sh $PWD/sing-box.sh && chmod +x sing-box.sh && ./sing-box.sh
+          set -xeuo pipefail
+          CRONET_GO_VERSION=$(cat .github/CRONET_GO_VERSION)
+          git init ~/cronet-go
+          git -C ~/cronet-go remote add origin https://github.com/sagernet/cronet-go.git
+          git -C ~/cronet-go fetch --depth=1 origin "$CRONET_GO_VERSION"
+          git -C ~/cronet-go checkout FETCH_HEAD
+          git -C ~/cronet-go submodule update --init --recursive --depth=1
+      
+      - name: Cache Chromium toolchain
+        id: cache-chromium-toolchain
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/cronet-go/naiveproxy/src/third_party/llvm-build/Release+Asserts
+            ~/cronet-go/naiveproxy/src/out/sysroot-build
+          key: chromium-toolchain-${{ matrix.arch }}-${{ matrix.variant }}-${{ hashFiles('.github/CRONET_GO_VERSION') }}
+    
+      - name: Download Chromium toolchain
+        run: |
+          set -xeuo pipefail
+          cd ~/cronet-go
+          go run ./cmd/build-naive --target=linux/${{ matrix.arch }} download-toolchain
+    
+      - name: Set Chromium toolchain environment
+        run: |
+          set -xeuo pipefail
+          cd ~/cronet-go
+          go run ./cmd/build-naive --target=linux/${{ matrix.arch }} env >> $GITHUB_ENV
+
+      - name: Set build tags
+        run: |
+          set -xeuo pipefail
+          TAGS='with_quic,with_grpc,with_dhcp,with_wireguard,with_utls,with_acme,with_clash_api,with_v2ray_api,with_gvisor,with_tailscale,with_naive_outbound'
+          echo "BUILD_TAGS=${TAGS}" >> "${GITHUB_ENV}"
+
+      - name: Build (glibc)
+        run: |
+          set -xeuo pipefail
+          mkdir -p dist
+          wget -O dist/geosite.db https://github.com/SagerNet/sing-geosite/releases/latest/download/geosite.db
+          wget -O dist/geoip.db https://github.com/SagerNet/sing-geoip/releases/latest/download/geoip.db
+          go build -v -trimpath -o dist/sing-box -tags "${BUILD_TAGS}" \
+          -ldflags '-s -buildid= -X github.com/sagernet/sing-box/constant.Version=${VERSION} \
+          ./cmd/sing-box
+        env:
+          CGO_ENABLED: "1"
+          GOOS: linux
+          GOARCH: ${{ matrix.arch }}
+          GO386: ${{ matrix.go386 }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set name
+        run: |-
+          DIR_NAME="sing-box-linux-${{ matrix.arch }}"
+          echo "DIR_NAME=${DIR_NAME}" >> "${GITHUB_ENV}"
+
+      - name: Archive
+        run: |
+          set -xeuo pipefail
+          cd dist
+          zip -9 -r "${DIR_NAME}.zip" sing-box geosite.db geoip.db
+          rm -rf sing-box geosite.db geoip.db
 
       - name: Release
         uses: ncipollo/release-action@v1
@@ -38,7 +113,7 @@ jobs:
           prerelease: false
           allowUpdates: true
           artifacts: |
-            ./release/*
+            ./dist/*
 
   push:
     needs: build
@@ -46,7 +121,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set variables
         run: |
@@ -58,22 +133,22 @@ jobs:
           cp src/sing-box/* $PWD
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2.1.0
+        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       
       - name: Login to DockerHub
-        uses: docker/login-action@v2.1.0
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       
       - name: Build latest
-        uses: docker/build-push-action@v4.1.1
+        uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          platforms: linux/386,linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/sing-box:latest
@@ -85,7 +160,7 @@ jobs:
     steps:
 
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set variables
         run: |
