--- a/src/sing-box/config.json
+++ b/src/sing-box/config.json
@@ -1,25 +1,43 @@
 {
   "log": {
-    "disabled": false,
-    "level": "info",
-    "output": "/var/log/sing-box/sing-box.log",
-    "timestamp": true
+    "level": "info"
+  },
+  "dns": {
+    "servers": [
+      {
+        "address": "tls://8.8.8.8"
+      }
+    ]
   },
   "inbounds": [
     {
       "type": "shadowsocks",
       "listen": "::",
       "listen_port": 8080,
+      "network": "tcp",
       "method": "2022-blake3-aes-128-gcm",
-      "password": "8JCsPssfgS8tiRwiMlhARg=="
+      "password": "Gn1JUS14bLUHgv1cWDDp4A==",
+      "multiplex": {
+        "enabled": true,
+        "padding": true
+      }
+    }
+  ],
+  "outbounds": [
+    {
+      "type": "direct"
+    },
+    {
+      "type": "dns",
+      "tag": "dns-out"
     }
   ],
   "route": {
-    "geoip": {
-      "path": "geoip.db"
-    },
-    "geosite": {
-      "path": "geosite.db"
-    }
+    "rules": [
+      {
+        "port": 53,
+        "outbound": "dns-out"
+      }
+    ]
   }
 }
