--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -11,9 +11,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - { os: linux, arch: amd64, variant: glibc, naive: true }
-          - { os: linux, arch: arm64, variant: glibc, naive: true }
-          - { os: linux, arch: "386", variant: glibc, naive: true, go386: sse2 }
+          - { os: linux, arch: amd64, variant: musl, naive: true }
+          - { os: linux, arch: arm64, variant: musl, naive: true }
+          - { os: linux, arch: "386", variant: musl, naive: true, go386: sse2 }
     steps:
       
       - name: Checkout
@@ -72,10 +72,10 @@ jobs:
       - name: Set build tags
         run: |
           set -xeuo pipefail
-          TAGS='with_quic,with_grpc,with_dhcp,with_wireguard,with_utls,with_acme,with_clash_api,with_v2ray_api,with_gvisor,with_tailscale,with_naive_outbound'
+          TAGS='with_quic,with_grpc,with_dhcp,with_wireguard,with_utls,with_acme,with_clash_api,with_v2ray_api,with_gvisor,with_tailscale,with_naive_outbound,with_musl'
           echo "BUILD_TAGS=${TAGS}" >> "${GITHUB_ENV}"
 
-      - name: Build (glibc)
+      - name: Build (musl)
         run: |
           set -xeuo pipefail
           mkdir -p dist
