--- a/.github/workflows/sing-box.yml
+++ b/.github/workflows/sing-box.yml
@@ -98,7 +98,7 @@ jobs:
           wget -O dist/geosite.db https://github.com/SagerNet/sing-geosite/releases/latest/download/geosite.db
           wget -O dist/geoip.db https://github.com/SagerNet/sing-geoip/releases/latest/download/geoip.db
           go build -v -trimpath -o dist/sing-box -tags "${BUILD_TAGS}" \
-          -ldflags "-s -buildid= -X github.com/sagernet/sing-box/constant.Version=${{ needs.set_version.outputs.VERSION }}" \
+          -ldflags "-s -buildid= -X github.com/sagernet/sing-box/constant.Version=${{ steps.set_version.outputs.VERSION }}" \
           ./cmd/sing-box
         env:
           CGO_ENABLED: "1"
@@ -124,8 +124,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: ${{ needs.set_version.outputs.VERSION }}
-          tag: ${{ needs.set_version.outputs.VERSION }}
+          name: ${{ steps.set_version.outputs.VERSION }}
+          tag: ${{ steps.set_version.outputs.VERSION }}
           draft: false
           prerelease: false
           allowUpdates: true
